# cuvis-ai-sam3

./: .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/: sam3-server.env
cuvis_ai_sam3/: __init__.py
cuvis_ai_sam3/node/: __init__.py  prompt_video.py  sam3_segment_everything.py  sam3_streaming_propagation.py  sam3_video_tracker.py  spectral_signature_extractor.py  utils.py
examples/: sam3_for_sam2_video_task_example.py
examples/object_tracking/: README.md  render_tracking_overlay.py  sam3_tracking_example.py  sam3_video_tracker.py
installer/: build.bat  convert_icon.py  download_weights.py  download_weights.spec  launcher.py  sam3_server.iss  sam3_server.spec  sam3_tray.spec  tray_launcher.py
rest_api/: __init__.py  __main__.py  app.py  config.py  middleware.py  models.py  predictor_service.py  session_manager.py  video_adapter.py
rest_api/routes/: __init__.py  health.py  objects.py  prompts.py  propagation.py  sessions.py
sam3/: model_builder.py
sam3/model/: io_utils.py  position_encoding.py  sam3_base_predictor.py  sam3_tracker_base.py  sam3_tracking_predictor.py  sam3_video_base.py  sam3_video_inference.py  sam3_video_predictor.py
sam3/perflib/: compile.py
tests/: __init__.py  conftest.py  test_imports.py
tests/cuvis_ai_sam3/: test_frame_buffer.py  test_imports.py  test_sam3_object_tracker.py  test_sam3_segment_everything.py  test_sam3_streaming_propagation.py  test_sam3_video_base.py  test_sam3_video_tracker.py  test_spectral_signature.py
tests/rest_api/: conftest.py  test_config.py  test_models.py  test_routes.py  test_session_manager.py
