[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis-ai-sam3"
dynamic = ["version"]
description = "SAM3 (Segment Anything Model 3) with a cuvis.ai-compatible plugin package."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Meta AI Research" },
    { name = "Cubert GmbH, Ulm, Germany", email = "cuvis.ai@cubert-gmbh.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # cuvis-ai-core framework (provides torch, torchvision, numpy, Node base class, plugin system)
    # Note: cuvis-ai (node catalog) is NOT needed -- only the core framework.
    "cuvis-ai-core>=0.1.3",
    # SAM3-specific dependencies (not provided by cuvis-ai-core)
    "timm>=1.0.17",
    "tqdm",
    "ftfy==6.1.1",
    "regex",
    "iopath>=0.1.10",
    "typing_extensions",
    "huggingface_hub",
    "einops",
    "decord",
    # Triton is imported by sam3/model/edt.py on module import.
    "triton-windows; platform_system == 'Windows'",
    "triton; platform_system != 'Windows'",
    "psutil",
    # sam3/model_builder.py imports pkg_resources at runtime.
    "setuptools<81",
    "opencv-python-headless>=4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/cubert-hyperspectral/cuvis-ai-sam3"

[tool.setuptools.packages.find]
include = ["sam3*", "cuvis_ai_sam3*"]

[tool.setuptools.package-data]
sam3 = ["assets/*.txt.gz"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

# Local development alternative (uncomment to use local path instead)
# cuvis-ai-core = { path = "../cuvis-ai-core", editable = true }

# Optional git override (if a specific unreleased tag/commit is needed)
# cuvis-ai-core = { git = "https://github.com/cubert-hyperspectral/cuvis-ai-core.git", tag = "v0.1.3" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "C4",
]
extend-select = [
    "ANN201",
    "ANN202",
    "ANN204",
]
ignore = [
    "ANN401",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Ignore upstream SAM3 code -- do not lint the fork
"sam3/**" = ["ALL"]
"scripts/**" = ["ALL"]
"examples/**" = ["ALL"]
"docs/**" = [
    "ANN201",
    "ANN202",
    "ANN204",
]
"tests/**" = [
    "ANN201",
    "ANN202",
    "ANN204",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[dependency-groups]
dev = [
    "setuptools-scm>=9.2.2",
]


